# kata-practice

./: .gitignore  README.md
kata-00/: CMakeLists.txt  README.md  main  main.cpp
kata-01/: CMakeLists.txt  README.md  main.cpp
kata-01/doc/: decoder.txt
kata-01/include/: rail_cipher.h
kata-01/src/: rail_cipher.cpp
kata-01/test/: CMakeLists.txt  test_rail_cipher.cpp
kata-02/: CMakeLists.txt  main.cpp
kata-02/include/: caesar_cipher.h
kata-02/src/: caesar_cipher.cpp
kata-02/test/: CMakeLists.txt  test_caesar_cipher.cpp
kata-03/: CMakeLists.txt  main.cpp
kata-03/include/: affine_cipher.h  afile_cipher.h
kata-03/src/: affine_cipher.cpp  afile_cipher.cpp
kata-03/test/: CMakeLists.txt  test_affine_cipher.cpp  test_afile_cipher.cpp
kata-04/: CMakeLists.txt  main.cpp
kata-04/include/: vernam_cipher.h
kata-04/src/: vernam_cipher.cpp
kata-04/test/: CMakeLists.txt  test_vernam_cipher.cpp
kata-05/: CMakeLists.txt  main.cpp
kata-05/data/: grammar.txt
kata-05/include/: application.h  grammar.h  production.h
kata-05/src/: application.cpp  grammar.cpp  production.cpp
